# cli-hack-sim

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: qwen-invoke.yml  qwen-review.yml  qwen-scheduled-triage.yml  qwen-triage.yml
DSA/: __init__.py  hash_table.py  searching.py  sorting.py  traversal_folder.py
DSA/graph/: __init__.py  graph.py  topologi_node.py
DSA/hash_table/: __init__.py  hash_table.py  sistem_autentikasi.py
DSA/linked_list/: __init__.py  circular.py  double.py  node.py  single.py
DSA/queue/: __init__.py  antrean_packet.py  queue.py
DSA/stack/: __init__.py  log_aktivitas.py  stack.py
DSA/tree/: __init__.py  tree.py
data/dalam-json/: akun_dan_status_server.json  bruteforce.json  daftar_folder_file_server.json  topologi.json  traffic.json
src/: __init__.py  filehandler.py  login.py  main_menu.py  searching.py  server.py  sorting.py
src/data/: server.txt
src/data/dalam-json/: akun_dan_status_server.json  daftar_folder_file_server  daftar_folder_file_server.json  topologi.json
tests/: test_circular_linked_list.py  test_double_linked_list.py  test_single_linked_list.py
tests/demo/: demo_async_header_menu.py  demo_double_prompt_toolkit.py  demo_main_menu.py  demo_monitoring_server.py  demo_monitoring_server_ring.py  demo_rich_circular.py  demo_rich_double.py  demo_rich_progress_bar.py  demo_rich_single.py  demo_rich_traversal_folder.py  demo_rich_tree.py
utils/: __init__.py  bruteforce.py  menu_utils.py  scan_credential_access.py  text_color_changer.py
